Temp screen jump fix

--- a/css/style.css
+++ b/css/style.css
@@ -139,3 +139,7 @@ iframe {
 #contact {
     display: none;
 }
+
+.container {
+    min-height: 600px !important;
+}
